--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e322e136cc.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -67,8 +68,180 @@
               </div>
           </section>
     </header>    
+    <main>
 
+      <!-- Every moment is Precious start  -->
+      <section class="container mt-5">
+        <div class="card mb-3" style="max-width: 100%;">
+          <div class="row g-0 d-flex justify-content-">
+            <div class="col-md-6 precious">
+              <img src="./images/wedding.png" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-6 d-flex align-items-center">
+              <div class="card-body">
+                <h1 class="card-title fw-bold">Every moment is Precious </h1>
+                <p style="color: rgb(73, 69, 69);" class="card-text fw-bold">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button type="button" class="btn btn-primary">Explore our album <i class="fa-solid fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Every moment is Precious end  -->
 
+    <!-- Our package start  -->
+    <div class="d-flex justify-content-center mt-5"><h2 class="fw-bold">Our package</h2></div>
+
+    <section class="d-sm-flex justify-content-center container mt-5 mb-5">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col-md-3">
+            <div class="card-body">
+              <h1 class="card-title fw-bold mb-2">$300</h1>
+              <h4 class="card-title fw-bold">Business fair</h4>
+              <p  style="font-size: 15px; color:#848199;" class="card-text m-0">For most businesses event 
+                like book fair, craft fair.</p>
+                  <div class="m-2 package-list">
+                    <p ><i class="fa-regular fa-square-check"></i> limited space access</p>
+                    <p ><i class="fa-regular fa-square-check"></i> Secuirty facility</p>
+                    <p ><i class="fa-regular fa-square-check"></i> event support</p>
+                    <p><i class="fa-regular fa-square-check"></i> Decoration design</p>
+                    <p><i class="fa-regular fa-square-check"></i> Per day bill</p>
+                    <div class=""><button type="button" >Choose plan</button></div>
+                  </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card-body">
+              <h1 class="card-title fw-bold mb-2">$500</h1>
+              <h4 class="card-title fw-bold">wedding basicr</h4>
+              <p  style="font-size: 15px; color:#848199;" class="card-text m-0">For weddings with basic plan
+                and limited item</p>
+                  <div class="m-2 package-list">
+                    <p ><i class="fa-regular fa-square-check"></i> Full space access</p>
+                    <p ><i class="fa-regular fa-square-check"></i> Food arrangement</p>
+                    <p ><i class="fa-regular fa-square-check"></i> mangement support</p>
+                    <p><i class="fa-regular fa-square-check"></i> Decoration design</p>
+                    <p><i class="fa-regular fa-square-check"></i> Billed as shift</p>
+                    <div class=""><button type="button" >Choose plan</button></div>
+                  </div>
+            </div>
+        </div>
+        <div id="spatial-Card" class="col-md-3 bg-primary">
+            <div class="card-body">
+              <div class="d-flex justify-content-end">
+                <div class="hot">
+                  <div class="d-flex justify-content-center">
+                    Hot
+                  </div>
+                </div>
+              </div>
+              <h1 style="color: white;" class="card-title fw-bold mb-2">$800</h1>
+              <h4 style="color: white;" class="card-title fw-bold">Wedding plus</h4>
+              <p style="color: white;"  style="font-size: 15px; color:#848199;" class="card-text m-0">For most weddings with premium plans</p>
+                <div class="m-2 package-list">
+                  <p style="color: white;" ><i class="fa-regular fa-square-check"></i> Full space access</p>
+                  <p style="color: white;" ><i class="fa-regular fa-square-check"></i> Dedicated team</p>
+                  <p style="color: white;" ><i class="fa-regular fa-square-check"></i> Buffet food</p>
+                  <p style="color: white;"><i class="fa-regular fa-square-check"></i> premium Decoration</p>
+                  <p style="color: white;"><i class="fa-regular fa-square-check"></i> pay as plan</p>
+                  <div class=""><button type="button" >Choose plan</button></div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card-body">
+              <h1 class="card-title fw-bold mb-2">$1200</h1>
+              <h4 class="card-title fw-bold">Corporate event</h4>
+              <p style="font-size: 15px; color:#848199;" class="card-text m-0">For most corporate business 
+                events</p>
+                <div class="m-2 package-list">
+                  <p><i class="fa-regular fa-square-check"></i> Full space access</p>
+                  <p><i class="fa-regular fa-square-check"></i> Dedicated team</p>
+                  <p><i class="fa-regular fa-square-check"></i> Buffet food</p>
+                  <p><i class="fa-regular fa-square-check"></i> premium Decoration</p>
+                  <p><i class="fa-regular fa-square-check"></i> pay as plan</p>
+                  <div class="mt-3"><button type="button" >Choose plan</button></div>
+                </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Our package end  -->
+
+    <!-- Happy Clients says start  -->
+    <section class="container mt-5 mb-5">
+        <div class="row">
+          <div class="col-md-4 mt-3">
+            <div class="card">
+              <div class="card-body">
+                <div class="d-flex justify-content-center">
+                  <p style="width: 253px; height: 104px;" class="card-title">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                </div>
+                <div class="d-flex justify-content-center align-items-center">
+                  <img src="./images/person 1.png" class="img-fluid mt-2 mb-2" width="100px" height="100px" alt="">
+                </div>
+                <div class="d-flex justify-content-center">
+                  <div>
+                    <h5 class="fw-bold">Regina Miles</h5>
+                  <h6 style="color: #747474;" class="fw-bold ms-4">Banker</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mt-3">
+            <div class="card">
+              <div class="card-body">
+                <div class="d-flex justify-content-center">
+                  <p style="width: 253px; height: 104px;" class="card-title">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                </div>
+                <div class="d-flex justify-content-center align-items-center">
+                  <img src="./images/person 1.png" class="img-fluid mt-2 mb-2" width="100px" height="100px" alt="">
+                </div>
+                <div class="d-flex justify-content-center">
+                  <div>
+                    <h5 class="fw-bold">Regina Miles</h5>
+                  <h6 style="color: #747474;" class="fw-bold ms-4">Banker</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mt-3">
+            <div class="card">
+              <div class="card-body">
+                <div class="d-flex justify-content-center">
+                  <p style="width: 253px; height: 104px;" class="card-title">Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                </div>
+                <div class="d-flex justify-content-center align-items-center">
+                  <img src="./images/person 1.png" class="img-fluid mt-2 mb-2" width="100px" height="100px" alt="">
+                </div>
+                <div class="d-flex justify-content-center">
+                  <div>
+                    <h5 class="fw-bold">Regina Miles</h5>
+                  <h6 style="color: #747474;" class="fw-bold ms-4">Banker</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </section>
+    <!-- Happy Clients says end  -->
+
+    <!-- Frequently Asked Questions start  -->
+    <section class="container mt-5">
+      <div>
+        <h2 class="fw-bold d-flex justify-content-center">Frequently Asked Questions</h2>
+      </div>
+      <div class="">
+        <div>
+          
+        </div>
+      </div>
+    </section>
+    <!-- Frequently Asked Questions end  -->
+    </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
