--- a/index.html
+++ b/index.html
@@ -230,19 +230,88 @@
     <!-- Happy Clients says end  -->
 
     <!-- Frequently Asked Questions start  -->
-    <section class="container mt-5">
-      <div>
-        <h2 class="fw-bold d-flex justify-content-center">Frequently Asked Questions</h2>
+    <section class="container mt-5 mb-5">
+      <div class="mb-5">
+        <h2 class="fw-bold d-flex justify-content-center mb-5">Frequently Asked Questions</h2>
       </div>
-      <div class="">
-        <div>
-          
+      <div class="d-flex ">
+        <div class="col-md-6">
+          <div class="accordion mt-5" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                  aria-expanded="true" aria-controls="collapseOne">
+                  what are the difference between flexbox and grid
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Grid is made for two-dimensional layout while Flexbox is for one.</strong> This means Flexbox can
+                  work on either row or columns at a time, but Grids can work on both. Flexbox, gives you more flexibility
+                  while working on either element (row or column).
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  what are the difference between bootstrap and tailwind
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Bootstrap is much larger than Tailwind and requires multiple files to access its full
+                    functionality.</strong> Because of this, using Bootstrap means a significantly larger file size than
+                  Tailwind. Bootstrap also offers mobile-first, responsive components pre-styled to create flawless website
+                  pages quickly.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  what is css box model
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>The CSS box model is essentially a box that wraps around every HTML element. It consists of:
+                    margins, borders, padding, and the actual content.</strong>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  what is a semantic tag?
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>Semantic HTML elements are those that clearly describe their meaning in a human- and
+                    machine-readable way.</strong> Elements such as header tag , fotter tag and article tag are all
+                  considered semantic because they accurately describe the purpose of the element and the type of content
+                  that is inside them
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="mt-4 ms-5 col-md-6 people-image">
+          <img class="img-fluid" src="./images/people.png" alt="">
         </div>
       </div>
     </section>
     <!-- Frequently Asked Questions end  -->
     </main>
-
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
