--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <div class="mb-5">
         <h2 class="fw-bold d-flex justify-content-center mb-5">Frequently Asked Questions</h2>
       </div>
-      <div class="d-flex ">
+      <div class="d-md-flex question-part">
         <div class="col-md-6">
           <div class="accordion mt-5" id="accordionExample">
             <div class="accordion-item">
@@ -312,6 +312,26 @@
     <!-- Frequently Asked Questions end  -->
     </main>
     
+    <!-- footer start  -->
+    <footer>
+      <div class="d-md-flex justify-content-between all-item">
+        <div>
+          <p>© 2020 bike. All rig hts reserved</p>
+        </div>
+        <div class="responsive-image"> 
+          <div class="logo-part">
+            <h4>Get the App</h4>
+            <div>
+              <a href=""><img src="./icons/Download_on_the_App_Store_Badge.svg.png" alt=""></a>
+            </div>
+            <div>
+              <a href=""><img src="./icons/Logo-app-Instalcion-Google-Play-Store.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer end  -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
